# vsd2svg

./: .gitignore  AUTHORS  INSTALL  INSTALL.mingw  Makefile  Makefile.am  NEWS  README  config.h.in  configure.ac
data/: Makefile.am
data/icons/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
installer/: Makefile.am
installer/macosx/: Makefile.am  Portfile
installer/rpm/: Makefile.am  mingw32-vsd2svg.spec  vsd2svg.spec
installer/win32/: Makefile.am  vsd2svg-setup.nsi  vsd2svg_homepage.url
src/: Makefile.am  vsd2svg-win.cpp  vsd2svg-win.h  vsd2svg-win.rc.in  vsd2svg.cpp
